--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,5 +3,7 @@
     "printWidth": 999,
     "tabWidth": 4,
     "eslintIntegration": true,
-    "stylelintIntegration": false
+    "stylelintIntegration": false,
+    "endOfLine": "auto",
+    "arrowParens": "avoid"
 }
